--- a/layouts/partials/cards.html
+++ b/layouts/partials/cards.html
@@ -50,7 +50,7 @@
               {{ else if $isSession }}
                 <!-- Session-specific content -->
                 {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-                {{ $dateHuman := .Date | time.Format "January 2, 2006" }}
+                {{ $dateHuman := .Date | time.Format "2 January 2006" }}
                 <time class="session-date" datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
                 
                 {{ with .Params.description }}
