--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,15 +1,15 @@
 :root {
-    --background: #FFFCFA;
+    --background: #f4e2d6;
     --primary: maroon;
     --accent: darkorange;
-    --borders: #ddd;
+    --borders: #d2d2d2;
     --text: #222;
     --links: rgb(200, 75, 0);
 
     --background-image: "";
     --main-font: Roboto, Helvetica, sans-serif;
 
-    --table-bg: #fff;
+    --table-bg: #f5ecec;
     --table-head-bg: var(--borders);
     --table-head-bottom: #bbb;
 }
